Fix CSS Align and Layout

--- a/src/style.css
+++ b/src/style.css
@@ -300,6 +300,7 @@ box-shadow: 4px 4px var(--tertiary-colour); /* Shadow color */
 background-color: #ccc; /* Out-of-focus background color */
 cursor: pointer;
 transition: all 0.3s;
+margin-right: 1rem;
 }
 
 /* Change background color when checked */
@@ -357,9 +358,19 @@ ul.styledList li{
 
 .todos li{
     display: flex;
-    gap: 1rem;
+    gap: 0.25rem;
     align-items: center;
     margin-bottom: 1rem;
+}
+
+.todos .priorityDiv{
+    border-radius: 4px;
+    background-color: var(--bg-color);
+    font-size: 14px;
+    padding: 3px;
+    font-weight: 300;
+    color: var(--header-colour);
+    margin-left: auto;
 }
 
 .content .banner{
